# wishly-telegram-bot

./: .env.dist  .gitignore  Dockerfile  bot.py  config.py  docker-compose.yml  onStartup.sh  pyproject.toml  recreate-wishly.sh  requirements.txt
alembic/: env.py
alembic/versions/: 157a543983db_.py  1ab9fbc1fa0b_creating_tables_users_wishlists_items_.py  299f1d281216_.py  489937745f66_.py  5f85c96d396a_.py  69f2d1f86220_add_ondelete_cascade_property.py  7e7bd76edba5_.py  89f844a75311_.py  a6f6f4807b4e_.py  b36c612dfecb_.py  b7f0fd6136ce_created_table_secret_lists_user_.py  d2f8ae7678b0_.py  d77eea3c0a21_.py  dca364cfb421_.py  dcddf0340718_.py  ee2b0a7ff57f_new_table_secret_lists.py  f73d3b54f5af_.py
bot/: __main__.py  bot_instance.py  config_reader.py  filters.py  states.py  strings.py  urls.py
bot/db/: models.py  queries.py  queries_old.py
bot/filters/: admin_filter.py  chat_type_filter.py  is_logged_user_filter.py  is_wishlist_exists.py
bot/handlers/: add_item.py  create_list.py  create_wishlist.py  delete_item_from_wishlist.py  start.py  (+12 more)
filters/: admin_filter.py  chat_type_filter.py  chat_with_bot.py  existing_wishlist_query_filter.py  is_logged_user.py  non_logged_users.py
handlers/: add_item.py  create_wishlist.py  delete_item_from_wishlist.py  echo_handler.py  edit_wishlist.py  find_wishlist.py  gift_ideas.py  gift_item.py  hide_wishlist.py  main_menu.py  main_menu_message.py  settings.py  show_wishlist.py  start.py
keyboards/: default.py  inline.py
src/: links.py  strings.py
states/: change_name.py  find_wishlist_states.py  item.py  wishlist.py
(+75 files in other folders)
