[tool.poetry]
name = "wishly-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wishly_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b7"
pydantic = "^1.10.8"
requests = "^2.31.0"
aioredis = "^2.0.1"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.1"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
