[tool.poetry]
name = "wishly-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wishly_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.1"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg = "^3.1.9"
redis = "^5.0.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
greenlet = "^3.0.2"
aiogram = "^3.2.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
